# reelsmaker

./: .env  pyproject.toml  reelsmaker.py
app/: base.py  config.py  effects.py  image_gen.py  prompt_gen.py  reels_maker.py  story_teller.py  subtitle_gen.py  synth_gen.py  video_gen.py
app/utils/: path_util.py  strings.py
